notification: Use g_signal_connect_object

This ensures the notification lives as long as the signal. This was
added in 2.62 so we add that to meson.build.

Fixes https://gitlab.gnome.org/GNOME/libnotify/-/issues/34